Update for testing

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,11 @@ body {
     background-color: #45a049;
 }
 
+.red-button {
+    background-color: red;
+    /* Add any other styles you want for the red button */
+}
+
 #status {
     margin-top: 10px;
     color: red;
