Added file description

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,9 @@
-/* styles.css */
+/**
+ * styles.css
+ *
+ * @author Rosnin Mustaffa
+ */
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f2f2f2;
